# neweddy

./: .gitignore  .ruff.toml  README.md  __init__.py  calibrate_macros.cfg  calibrate_macros_cartographer.cfg  conftest.py  eddy-ng.cfg  example-printer.cfg  flash.sh  install.py  install.sh  install_eddy_ng.py  klipper.patch  ldc1612_ng.py  pyproject.toml  uninstall.sh  update-klipper.sh
.github/workflows/: build-firmware.yml  ci.yml
eddy-ng/: sensor_ldc1612_ng.c
firmware/: README.md
probe_eddy_ng/: __init__.py  _compat.py  alpha_beta_filter.py  backlash.py  bed_mesh_helper.py  endstop.py  frequency_map.py  mesh_paths.py  params.py  probe.py  sampler.py  scanning.py  streaming.py  temperature_compensation.py
scripts/: calibrate.sh  flash-duo.sh  install.sh
src/eddy_ng/: __init__.py
src/eddy_ng/scaffolding/: ldc1612_ng.py  probe_eddy_ng.py
tests/: test_frequency_map.py
